# imputator

./: .gitignore  .pre-commit-config.yaml  cal.py  config.sample.py  coordinador.py  issuetracker.py  pyproject.toml  report.py  requirements.txt
claimer/: cal.py  cli.py  config.py  helper.py  issuetracker.py  report.py
